# cogno

./: Cargo.toml
src/: attention.rs  cognitive_appraisal.rs  cogno_system.rs  continuous_mind.rs  core.rs  emotional_expression.rs  emotional_memory.rs  emotional_regulation.rs  goals.rs  llm_api.rs  main.rs  memory.rs  metacognition.rs  personality_traits.rs  social_context.rs  utils.rs
